Fix sans-serif heading spacing

--- a/main.css
+++ b/main.css
@@ -698,9 +698,7 @@ h3.sans-serif,
 h4.sans-serif,
 h5.sans-serif,
 h6.sans-serif {
-  font-family: "Source Sans Pro", arial, sans-serif;
-  margin-top: 0;
-  margin-bottom: 0; }
+  font-family: "Source Sans Pro", arial, sans-serif; }
 h1 { font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem;}
 h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
 h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
